--- a/GroupProject/Base.lproj/Main.storyboard
+++ b/GroupProject/Base.lproj/Main.storyboard
@@ -359,11 +359,21 @@
                                     <action selector="addEvent:" destination="eZc-Xe-TGD" eventType="touchUpInside" id="SkU-Vc-oYC"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fKE-iB-Deb">
+                                <rect key="frame" x="31" y="147" width="25" height="25"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="icons8-long-arrow-left-filled-25"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gge-wq-emV">
+                                <rect key="frame" x="350" y="146" width="25" height="25"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="icons8-right-arrow-filled-25"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.8173556923866272" green="0.62914472818374634" blue="0.29794448614120483" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="Sfh-HJ-mhR" firstAttribute="leading" secondItem="4bx-qv-OU6" secondAttribute="leading" constant="5" id="8qO-dY-Xjx"/>
-                            <constraint firstItem="QQl-zQ-7a2" firstAttribute="leading" secondItem="4bx-qv-OU6" secondAttribute="leading" constant="5" id="DnN-px-oQZ"/>
+                            <constraint firstItem="QQl-zQ-7a2" firstAttribute="leading" secondItem="4bx-qv-OU6" secondAttribute="leading" id="DnN-px-oQZ"/>
                             <constraint firstItem="7H1-Qc-3OZ" firstAttribute="leading" secondItem="4bx-qv-OU6" secondAttribute="leading" constant="5" id="IKC-wy-Op8"/>
                             <constraint firstItem="4bx-qv-OU6" firstAttribute="trailing" secondItem="ybt-pb-wo2" secondAttribute="trailing" constant="5" id="J6t-xm-JQ8"/>
                             <constraint firstItem="gJL-wu-h0O" firstAttribute="leading" secondItem="4bx-qv-OU6" secondAttribute="leading" constant="5" id="JJv-l3-ONO"/>
@@ -533,10 +543,12 @@
     <resources>
         <image name="icons8-calendar-20" width="20" height="20"/>
         <image name="icons8-go-back-35" width="35" height="35"/>
+        <image name="icons8-long-arrow-left-filled-25" width="25" height="25"/>
         <image name="icons8-plus-25" width="25" height="25"/>
+        <image name="icons8-right-arrow-filled-25" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="o0O-9o-yzX"/>
+        <segue reference="Esp-i9-LA7"/>
         <segue reference="hbO-W0-MDF"/>
     </inferredMetricsTieBreakers>
 </document>
