--- a/GroupProject/Base.lproj/Main.storyboard
+++ b/GroupProject/Base.lproj/Main.storyboard
@@ -10,23 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Fitness Planner -->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GroupProject" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.28902456900000001" green="0.95435437820000002" blue="0.89009639630000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Fitness Planner " id="sLc-30-gsQ"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-468" y="-220"/>
-        </scene>
-        <!--Item-->
+        <!--Fitness Tracker-->
         <scene sceneID="Bye-uh-15U">
             <objects>
                 <viewController id="sG2-Uc-3N6" customClass="TimerViewController" customModule="GroupProject" customModuleProvider="target" sceneMemberID="viewController">
@@ -135,7 +119,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="TwS-fb-oVo"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="wHx-GY-joY" userLabel="Fitness Tracker"/>
+                    <tabBarItem key="tabBarItem" title="Fitness Tracker" id="wHx-GY-joY" userLabel="Fitness Tracker"/>
                     <connections>
                         <outlet property="heightLabel" destination="PfB-NE-9Tp" id="kVQ-6x-dRg"/>
                         <outlet property="milesLabel" destination="RwW-b8-Acb" id="gsv-rf-Vf6"/>
@@ -145,22 +129,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8gY-H7-ZjI" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="556" y="507"/>
-        </scene>
-        <!--Sleep tacker-->
-        <scene sceneID="Se7-zg-sXW">
-            <objects>
-                <viewController id="rs4-3G-7C7" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="0N3-Ze-d1I">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="9ba-UM-jju"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Sleep tacker" id="WlU-Z5-05h"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Le3-LK-1DY" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-686" y="781"/>
         </scene>
         <!--Calander View Controller-->
         <scene sceneID="aDP-0f-fYR">
@@ -609,9 +577,8 @@
                     </tabBar>
                     <connections>
                         <segue destination="D51-DR-dvg" kind="relationship" relationship="viewControllers" id="Qg2-S5-8OJ"/>
-                        <segue destination="rs4-3G-7C7" kind="relationship" relationship="viewControllers" id="VFg-Wj-iIg"/>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="Vsr-uB-PqX"/>
                         <segue destination="sG2-Uc-3N6" kind="relationship" relationship="viewControllers" id="q4A-WR-yzS"/>
+                        <segue destination="LJl-ol-VkX" kind="relationship" relationship="viewControllers" id="Ic1-nT-pC5"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FbL-iO-TQP" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -712,6 +679,91 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eTz-oV-umZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-723.1884057971015" y="-924.10714285714278"/>
+        </scene>
+        <!--Sleep Analysis-->
+        <scene sceneID="zwl-cU-N02">
+            <objects>
+                <viewController id="LJl-ol-VkX" customClass="SleepViewController" customModule="GroupProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sUk-lT-ihM"/>
+                        <viewControllerLayoutGuide type="bottom" id="TIs-ES-Y93"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="KxU-Xt-EXE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="efK-P7-NvV">
+                                <rect key="frame" x="89" y="178" width="225" height="390"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="138" id="N6k-5t-yWe"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="27"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gy7-2c-VEw">
+                                <rect key="frame" x="353" y="770" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="3H4-tT-hdh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
+                                <state key="normal" title="Stop">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="stopWithSender:" destination="LJl-ol-VkX" eventType="touchUpInside" id="X5H-HV-Jrq"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cwO-wj-amD">
+                                <rect key="frame" x="31" y="824" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="RYC-r8-qik"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
+                                <state key="normal" title="Start">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="startWithSender:" destination="LJl-ol-VkX" eventType="touchUpInside" id="AMc-aA-1gq"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="your Health App to analyze it!" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dTz-Ef-jAy">
+                                <rect key="frame" x="89" y="178" width="204" height="18"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="italicSystem" pointSize="15"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Time your sleep and head over to " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yRN-Ip-548">
+                                <rect key="frame" x="79" y="151" width="267" height="12"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="italicSystem" pointSize="15"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="cwO-wj-amD" firstAttribute="leading" secondItem="KxU-Xt-EXE" secondAttribute="leading" constant="20" symbolic="YES" id="4P5-XC-pif"/>
+                            <constraint firstItem="efK-P7-NvV" firstAttribute="centerX" secondItem="KxU-Xt-EXE" secondAttribute="centerX" id="Ao2-o6-T7v"/>
+                            <constraint firstItem="Gy7-2c-VEw" firstAttribute="baseline" secondItem="cwO-wj-amD" secondAttribute="baseline" id="E1A-mb-oBt"/>
+                            <constraint firstItem="TIs-ES-Y93" firstAttribute="top" secondItem="efK-P7-NvV" secondAttribute="bottom" constant="297" id="JSO-FB-PY8"/>
+                            <constraint firstItem="TIs-ES-Y93" firstAttribute="top" secondItem="cwO-wj-amD" secondAttribute="bottom" constant="13" id="ctJ-bh-na4"/>
+                            <constraint firstAttribute="trailing" secondItem="Gy7-2c-VEw" secondAttribute="trailing" constant="15" id="kCi-7t-toA"/>
+                            <constraint firstItem="efK-P7-NvV" firstAttribute="top" secondItem="sUk-lT-ihM" secondAttribute="bottom" constant="131" id="tb0-ef-N1N"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="thF-3u-8U0"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Sleep Analysis" id="F3O-hK-x4F"/>
+                    <connections>
+                        <outlet property="displayTimeLabel" destination="efK-P7-NvV" id="tRi-Gp-Add"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j8a-rX-PdX" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1239" y="492"/>
         </scene>
     </scenes>
     <resources>
