--- a/GroupProject/Base.lproj/Main.storyboard
+++ b/GroupProject/Base.lproj/Main.storyboard
@@ -489,8 +489,6 @@
                     </tabBar>
                     <connections>
                         <segue destination="D51-DR-dvg" kind="relationship" relationship="viewControllers" id="Qg2-S5-8OJ"/>
-                        <segue destination="rs4-3G-7C7" kind="relationship" relationship="viewControllers" id="VFg-Wj-iIg"/>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="Vsr-uB-PqX"/>
                         <segue destination="hQ2-pn-2Kx" kind="relationship" relationship="viewControllers" id="RUe-Pg-kZm"/>
                         <segue destination="VU5-TV-IOQ" kind="relationship" relationship="viewControllers" id="iW5-9Y-Utg"/>
                     </connections>
@@ -594,10 +592,10 @@
             </objects>
             <point key="canvasLocation" x="-723.1884057971015" y="-924.10714285714278"/>
         </scene>
-        <!--Item-->
+        <!--Fitness Tracker-->
         <scene sceneID="6RK-AT-k7a">
             <objects>
-                <viewController id="hQ2-pn-2Kx" customClass="TimerViewController" customModule="GroupProject" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="hQ2-pn-2Kx" userLabel="Fitness Tracker" customClass="TimerViewController" customModule="GroupProject" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="r7h-Of-Bro"/>
                         <viewControllerLayoutGuide type="bottom" id="32k-Bg-tlr"/>
@@ -703,7 +701,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="vPe-t3-0Fb"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="UoB-wp-5u8"/>
+                    <tabBarItem key="tabBarItem" title="Fitness Tracker" id="UoB-wp-5u8" userLabel="Fitness Tracker"/>
                     <connections>
                         <outlet property="heightLabel" destination="UTu-HC-gmQ" id="4Lf-Km-ly3"/>
                         <outlet property="milesLabel" destination="pJy-aW-ymt" id="aDH-sZ-bXz"/>
@@ -833,10 +831,10 @@
             </objects>
             <point key="canvasLocation" x="556" y="507"/>
         </scene>
-        <!--Item-->
+        <!--Sleep Tracker-->
         <scene sceneID="HMU-dN-K7Z">
             <objects>
-                <viewController id="VU5-TV-IOQ" customClass="SleepViewController" customModule="GroupProject" sceneMemberID="viewController">
+                <viewController id="VU5-TV-IOQ" userLabel="Sleep Tracker" customClass="SleepViewController" customModule="GroupProject" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="R9e-nA-Gdw"/>
                         <viewControllerLayoutGuide type="bottom" id="TO0-v1-Aem"/>
@@ -851,7 +849,7 @@
                                     <constraint firstAttribute="width" constant="138" id="gOe-dZ-u2G"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="27"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" red="1" green="0.50196078430000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OtD-q8-yMG">
@@ -861,7 +859,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
                                 <state key="normal" title="Stop">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleColor" red="1" green="0.50196078431372548" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
@@ -875,7 +873,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
                                 <state key="normal" title="Start">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleColor" red="1" green="0.50196078431372548" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
@@ -885,19 +883,19 @@
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="your Health App to analyze it!" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cZB-7L-r2p">
                                 <rect key="frame" x="89" y="178" width="204" height="18"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" red="1" green="0.50196078430000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="italicSystem" pointSize="15"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Time your sleep and head over to " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0aV-5f-dgr">
                                 <rect key="frame" x="79" y="151" width="267" height="12"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" red="1" green="0.50196078430000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="italicSystem" pointSize="15"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="U0O-gn-T9R" firstAttribute="leading" secondItem="58o-1j-dCJ" secondAttribute="leading" constant="20" symbolic="YES" id="0oK-2F-EkS"/>
                             <constraint firstItem="0Uz-ro-MgU" firstAttribute="top" secondItem="R9e-nA-Gdw" secondAttribute="bottom" constant="131" id="5Fi-1j-Yij"/>
@@ -909,7 +907,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="EfH-pK-waR"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="5rB-Rl-nPt"/>
+                    <tabBarItem key="tabBarItem" title="Sleep Tracker" id="5rB-Rl-nPt" userLabel="Sleep Tracker"/>
                     <connections>
                         <outlet property="displayTimeLabel" destination="0Uz-ro-MgU" id="Wsm-KX-SbE"/>
                     </connections>
